fixed the overflow bug

--- a/TrinityFrontend/src/templates/tables/table.css
+++ b/TrinityFrontend/src/templates/tables/table.css
@@ -34,7 +34,7 @@
 }
 
 .table-base {
-  @apply min-w-[700px] w-full border-collapse text-xs;
+  @apply w-full border-collapse text-xs;
   border-collapse: separate;
   border-spacing: 0;
   table-layout: fixed !important; /* Ensure consistent column widths */
